# Tira3D

./: .gitignore  README.md  Tira3D.sln
Tira3D/: CMakeLists.txt  Tira3D.vcxproj  Tira3D.vcxproj.filters  application.cpp
Tira3D Testing/: CMakeLists.txt  Tira3D Testing.vcxproj  Tira3D Testing.vcxproj.filters  application.cpp
Tira3D Testing/Test Application/: application.cpp
Tira3D/resources/shaders/: Basic.kliveshader
Tira3D/src/Basics/: BasicMovement.cpp  BasicMovement.h
Tira3D/src/Files/: FileUtilities.cpp  FileUtilities.h
Tira3D/src/Input/: TiraInput.cpp  TiraInput.h
Tira3D/src/Logger/: Tira3DLogging.cpp  Tira3DLogging.h
Tira3D/src/Maths/: TiraMath.cpp  TiraMath.h
Tira3D/src/Renderer/: Tira3D.cpp  Tira3D.h  Tira3DRenderThread.cpp  Tira3DRenderThread.h  Tira3DRendering.cpp  Tira3DRendering.h  TiraDossier.cpp  TiraDossier.h  WindowRenderInfo.h
Tira3D/src/Renderer/Mesh/: Mesh.cpp  Mesh.h  MeshSetup.h
Tira3D/src/Renderer/RenderObjects/: IndexBuffer.cpp  IndexBuffer.h  VAO.cpp  VAO.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
Tira3D/src/Renderer/Shaders/: Shader.cpp  Shader.h
Tira3D/src/Renderer/Textures/: Texture.cpp  Texture.h
Tira3D/src/Shaders/: Shader.cpp
Tira3D/src/World/: Camera.cpp  Camera.h  World.h
Tira3D/src/World/Camera/: Camera.cpp  Camera.h  CameraRender.cpp  CameraRender.h
Tira3D/src/World/Designer/: TiraDesigner.cpp  TiraDesigner.h
Tira3D/src/World/TiraObjects/: TiraObjectsTemplates.cpp  TiraObjectsTemplates.h
Tira3D/src/WorldObjects/: ObjectAttributes.cpp  ObjectAttributes.h  WorldObject.cpp  WorldObject.h
(+10 files in other folders)
